# gash-utils

./: .dir-locals.el  .gitignore  70-slash-string-slash.stdout  AUTHORS  BUGS  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  TODO  anguish  check.sh  configure  configure.ac  gash  gash.guix.scm  guix.scm  makefile  peg.scm  pipe.scm  pre-inst-env.in  sh.bnf  sh.peg.scm  stack.scm  test-anguish.sh  test-bash.sh  test.sh
build-aux/: build-guile.sh  gitlab-ci.yml  gitlog-to-changelog-repro.patch  guile.am  pre-inst-env.in  trace.sh
doc/: awk-syntax.txt  awk.grammar  gash.info  gash.texi  syntax.txt
gash/: bournish-commands.scm  builtins.scm  compress.scm  config.scm.in  diff.scm  environment.scm  gash.scm  geesh.scm  grammar.scm  guix-build-utils.scm  guix-utils.scm  io.scm  job.scm  lzw.scm  peg.scm  pipe.scm  readline.scm  script.scm  shell-utils.scm  tar.scm  ustar.scm  util.scm
gash-utils/: file-formats.scm  options.scm  regex.scm
gash/commands/: awk.scm  basename.scm  cat.scm  chmod.scm  cmp.scm  compress.scm  config.scm.in  cp.scm  cut.scm  diff.scm  dirname.scm  env.scm  expr.scm  false.scm  find.scm  grep.scm  head.scm  ln.scm  ls.scm  mkdir.scm  mv.scm  printf.scm  pwd.scm  reboot.scm  rm.scm  rmdir.scm  sed.scm  sleep.scm  sort.scm  tar.scm  test.scm  touch.scm  tr.scm  true.scm  uname.scm  uniq.scm  wc.scm  which.scm
gash/commands/awk/: lexer.scm  parser.scm
gash/commands/sed/: reader.scm
gash/peg/: cache.scm  codegen.scm  simplify-tree.scm  string-peg.scm  using-parsers.scm
geesh/: built-ins.scm  environment.scm  eval.scm  lexer.scm  parser.scm  pattern.scm  repl.scm  shell.scm  word.scm
geesh/built-ins/: break.scm  cd.scm  colon.scm  continue.scm  dot.scm  echo.scm  eval.scm  exec.scm  exit.scm  export.scm  false.scm  pwd.scm  read.scm  readonly.scm  return.scm  set.scm  shift.scm  trap.scm  true.scm  umask.scm  unset.scm  utils.scm
peg/: cache.scm  codegen.scm  simplify-tree.scm  string-peg.scm  using-parsers.scm
scripts/: gash.in  geesh.in  template.in
sh/: anguish.scm  io.scm  job.scm  peg.scm  pipe.scm  util.scm
test/: 00-exit-var.sh  00-sed-global.sh  01-script-$0.sh  01-script-$@.stdout  01-script-backslash-space.sh  01-script-backslash.sh  01-script-newline.sh  01-script-semi.sh  01-script-shift.sh  03-echo-brace.stdout  03-echo-escaped-doublequotes.sh  03-echo-nesting.sh  04-echo-equal.sh  04-echo-word-at-word.sh  04-echo-word-at.sh  04-echo-word-at.stdout  05-assignment-backtick.sh  05-assignment-doublequoted-doublequotes.sh  05-assignment-doublequoted-doublequotes.stdout  05-assignment-echo.sh  05-assignment-empty.sh  05-assignment-variable-word.stdout  06-command-compound-word.stdout  06-compound-word.sh  07-variable-or-doublequote.sh  07-variable-or-slash.sh  07-variable-or.sh  08-assignment-variable-word.sh  0a-assign-substitute.sh  0a-assign-substitute.stdout  10-if-bracket-false.sh  10-if-bracket.sh  10-if-else.sh  10-if-line.sh  10-if-multiple.sh  10-if-test.sh  10-if-word-variable.sh  100-basename-autoconf.sh  100-basename-root.stdout  100-bracket-file.sh  (+78 more)
test/data/: diff.scm  fooRbar  ro.tar  script.sh
tests/: 00-exit-error.sh  01-script-backslash-twice.sh  01-script-shift.stdout  03-echo-brace.sh  03-echo-doublequotes.sh  03-echo-escaped-doublequotes.stdout  03-echo-nesting.stdout  03-echo-quoted-doublequotes.sh  04-echo-word-at-word.stdout  05-assignment-double-quote.sh  05-assignment-singlequote.sh  05-assignment-variable-word.sh  05-assignment-word-variable.sh  05-assignment-word-variable.stdout  06-command-compound-word.sh  06-compound-word.stdout  07-variable-not-or.sh  07-variable-or-empty.sh  07-variable-or-variable.sh  08-variable-and.sh  08-variable-not-and.sh  10-else-multiple.sh  10-if-bracket.sh  10-if-elif.sh  10-if-false.sh  10-if-redirect.sh  10-if-test-false.sh  10-if.sh  100-awk-array.sh  100-awk-array.stdout  100-awk-begin-end.sh  100-awk-begin-end.stdout  100-awk-bool.sh  100-awk-bool.stdout  100-awk-builtin-length.sh  100-awk-builtin-split.sh  100-awk-builtin-split.stdout  100-awk-builtin-substr.sh  100-awk-builtin-substr.stdout  100-awk-concat.sh  (+93 more)
tests/bootstrap/: bash-without-bash.scm
tests/data/: README  basename.sed
tests/data/awk/: array.awk  begin-end.awk  bool.awk  builtin-length.awk  builtin-split.awk  builtin-substr.awk  concat.awk  expr.awk  fields.awk  if.awk  match.awk  re.awk  subs.awk  subs.in
tests/spec/: Makefile.am  check-spec  oil.scm
tests/unit/: automake.scm  awk-parser.scm  config.scm.in  file-formats.scm  lexer.scm  parser.scm  pattern.scm  sed-reader.scm  shell-utils.scm  shell.scm  word.scm
todo/: case  for.sh  ifthenelse.sh  process-substitution-in  test  test.sh
tools/: coverage.in
